apps/Grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: default
  defaultBackend:
    service:
      name: grafana
      port:
        number: 80
  rules:
  - host: monitoring.forlin.com
    http:
      paths:
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 80
